--- a/inductive-python/07_functions.ipynb
+++ b/inductive-python/07_functions.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -107,22 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def square(x):\n",
     "    \"\"\"\n",
@@ -149,22 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -380,23 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "402.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def some_function(a):\n",
     "    \"\"\"\n",
@@ -497,19 +472,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def some_function(a):\n",
     "    \"\"\"\n",
@@ -537,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -585,6 +552,58 @@
    },
    "source": [
     "### Rule of thumb: <font color=\"red\">NEVER</font> copy a block of code in the same program! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def another_function(a):\n",
+    "    \n",
+    "    b = 5*a\n",
+    "\n",
+    "another_function(5)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def a_function(a):\n",
+    "    x = 5*a\n",
+    "    \n",
+    "x = 5\n",
+    "a_function(x)\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def yet_another_function(a):\n",
+    "    b = 5*a\n",
+    "    \n",
+    "    return b\n",
+    "\n",
+    "x = 5\n",
+    "x = yet_another_function(x)\n",
+    "\n",
+    "print(x)\n"
    ]
   }
  ],
