ready for class 5

--- a/inductive-python/08_namespace.ipynb
+++ b/inductive-python/08_namespace.ipynb
@@ -154,12 +154,16 @@
     }
    },
    "source": [
-    "XX"
+    "The program throws an error.  "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Predict what will happen when you run the cell below:"
    ]
@@ -168,7 +172,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
    },
    "outputs": [],
    "source": [
@@ -178,7 +185,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### <font color=\"blue\">Explanation:</font>\n",
     "\n",
@@ -222,7 +233,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -239,7 +253,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
