--- a/inductive-python/06_numpy_arrays.ipynb
+++ b/inductive-python/06_numpy_arrays.ipynb
@@ -14,14 +14,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
    "source": [
     "x = []\n",
     "for i in range(1,11):\n",
@@ -152,17 +160,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "an_array = np.array([1,2,3,4,5,6,7,8,9,10],dtype=int)\n",
+    "an_array = np.array([1,2,3,4,5,6,7,8,9,10],dtype=np.int64)\n",
     "print(an_array[3])"
    ]
   },
@@ -208,14 +224,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate list (not \"int\") to list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-f7a8309d2390>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msome_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msome_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msome_list\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
+     ]
+    }
+   ],
    "source": [
     "some_list = [1,2,3]\n",
     "print(some_list)\n",
@@ -235,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -244,7 +279,10 @@
    },
    "outputs": [],
    "source": [
-    "some_list = [1,2,3]"
+    "some_list = [1,2,3]\n",
+    "\n",
+    "for i in range(len(some_list)):\n",
+    "    some_list[i] = some_list[i] + 5"
    ]
   },
   {
@@ -260,18 +298,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5 10 15]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np  \n",
     "some_array = np.array([1,2,3])\n",
-    "some_array = some_array + 5"
+    "some_array = some_array  *5\n",
+    "print(some_array)"
    ]
   },
   {
@@ -298,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -310,19 +357,28 @@
     "import numpy as np\n",
     "\n",
     "a_list = list(range(100000))\n",
-    "an_array = np.array(range(100000))"
+    "an_array = np.array(range(100000),dtype=int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 7.64 ms per loop\n",
+      "10000 loops, best of 3: 62.4 µs per loop\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit for i in range(100000):  a_list[i] + 5\n",
     "%timeit an_array + 5"
@@ -385,32 +441,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "x = np.array([1,2,3])\n",
-    "y = np.array([4,5,6])\n",
+    "y = np.array([4,5])\n",
     "\n",
-    "print(x + y)"
+    "#print(x + y)\n",
+    "\n",
+    "x.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.84147098  0.90929743  0.14112001]\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.sin(x))"
    ]
@@ -451,14 +528,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n"
+     ]
+    }
+   ],
    "source": [
     "an_array = np.array([[1,2],[3,4]],dtype=int)\n",
     "print(an_array)"
@@ -466,16 +552,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.]\n",
+      " [ 0.  0.]]\n",
+      "[[ 1.  2.]\n",
+      " [ 3.  4.]]\n"
+     ]
+    }
+   ],
    "source": [
     "an_array = np.zeros((2,2),dtype=float)\n",
+    "print(an_array)\n",
     "an_array[0,0] = 1\n",
     "an_array[0,1] = 2\n",
     "an_array[1,0] = 3\n",
@@ -520,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -528,14 +626,32 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 8 9]\n",
+      "\n",
+      "1\n",
+      "\n",
+      "[[1]\n",
+      " [4]\n",
+      " [7]]\n",
+      "\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "an_array = np.array([[1,2,3],[4,5,6],[7,8,9]],dtype=int)\n",
-    "print(an_array[0])\n",
+    "print(an_array[-1])\n",
     "print(\"\")\n",
     "print(an_array[0,0])\n",
     "print(\"\")\n",
-    "print(an_array[:,0])\n",
+    "print(an_array[:,0].reshape(3,1))\n",
     "print(\"\")\n",
     "print(an_array[:,:])"
    ]
@@ -607,14 +723,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element wise sum: [ 7 11]\n",
+      "Element wise difference: [-1 -1]\n",
+      "Element wise product: [12 30]\n",
+      "Element wise division: [ 0.75        0.83333333]\n",
+      "Dot product: 42\n"
+     ]
+    }
+   ],
    "source": [
     "# Define two vector-like arrays\n",
     "x = np.array([3,5])\n",
@@ -713,14 +841,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x : [ 1. -2. -2.]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([\n",
     "    [ 3,   2, -1],\n",
@@ -754,14 +890,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "λ 1: 3.35424868894\n",
+      "Eigen vector 1: [-0.8767397 -0.6354064]\n",
+      "\n",
+      "\n",
+      "λ 2: 8.64575131106\n",
+      "Eigen vector 2: [ 0.48096517 -0.7721779 ]\n"
+     ]
+    }
+   ],
    "source": [
     "M = np.array([\n",
     "    [5, 3],\n",
