--- a/lessons/inductive-python/07_functions.ipynb
+++ b/lessons/inductive-python/07_functions.ipynb
@@ -215,19 +215,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def some_function(ARGUMENT):\n",
     "    \"\"\"\n",
     "    Print out ARGUMENT.\n",
     "    \"\"\"\n",
+    "    return 1\n",
+    "    \n",
     "    print(ARGUMENT)\n",
     "    \n",
     "some_function(10)\n",
@@ -289,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -319,23 +332,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 5 2\n",
+      "1 2 7\n",
+      "5 4 7\n"
+     ]
+    }
+   ],
    "source": [
-    "def some_function(a,b=5):\n",
+    "def some_function(a,b=5,c=7):\n",
     "    \"\"\"\n",
     "    Print a and b.\n",
     "    \"\"\"\n",
     "    \n",
-    "    print(a,b)\n",
+    "    print(a,b,c)\n",
     "    \n",
-    "some_function(1)\n",
+    "some_function(1,c=2)\n",
     "some_function(1,2)\n",
     "some_function(a=5,b=4)"
    ]
@@ -364,14 +387,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "10\n",
+      "402.5\n"
+     ]
+    }
+   ],
    "source": [
     "def some_function(a):\n",
     "    \"\"\"\n",
@@ -379,6 +412,9 @@
     "    \"\"\"\n",
     "    \n",
     "    return a*5\n",
+    "\n",
+    "x = some_function(5)\n",
+    "print(x)\n",
     "\n",
     "print(some_function(2))\n",
     "print(some_function(80.5))"
@@ -421,21 +457,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "def some_function(a,b):\n",
     "    \"\"\"\n",
     "    Sum up a and b.\n",
     "    \"\"\"\n",
     "    \n",
-    "    v = a + b"
+    "    v = a + b\n",
+    "    \n",
+    "    return v\n",
+    "\n",
+    "v = some_function(1,2)\n",
+    "\n",
+    "print(v)"
    ]
   },
   {
@@ -472,11 +522,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "def some_function(a):\n",
     "    \"\"\"\n",
@@ -485,9 +543,9 @@
     "    \n",
     "    return a*5, a*2\n",
     "\n",
-    "x, y = some_function(5)\n",
+    "_, y = some_function(5)\n",
     "\n",
-    "print(x,y)"
+    "print(x)"
    ]
   },
   {
