finished pythonic-science cleanup

--- a/lessons/00_inductive-python/table-of-contents.ipynb
+++ b/lessons/00_inductive-python/table-of-contents.ipynb
@@ -51,11 +51,9 @@
     "+ [Decision-making in python (conditionals)](02_conditionals.ipynb)\n",
     "+ [Loops](03_loops.ipynb)\n",
     "+ [Lists](04_lists.ipynb)\n",
-    "+ [Tuples and dicts and strings](05_tuples-and-dicts-and-strings.ipynb)\n",
-    "+ [numpy arrays](06_numpy_arrays.ipynb)\n",
-    "+ [Functions](07_functions.ipynb)\n",
-    "+ [Namespace](08_namespace.ipynb)\n",
-    "+ [Plotting with matplotlib](09_plotting.ipynb)"
+    "+ [numpy arrays](05_numpy_arrays.ipynb)\n",
+    "+ [Tuples and dicts and strings](06_tuples-and-dicts-and-strings.ipynb)\n",
+    "+ [Functions](07_functions.ipynb)"
    ]
   },
   {
@@ -71,15 +69,6 @@
     "+ [Graphing reference](09_plotting.ipynb)\n",
     "+ [Python cheatsheet](../docs/build/cheat-sheet.html)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
