--- a/lessons/00_inductive-python/05_numpy-arrays.ipynb
+++ b/lessons/00_inductive-python/05_numpy-arrays.ipynb
@@ -14,22 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "36\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = []\n",
     "for i in range(1,11):\n",
@@ -160,22 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "an_array = np.array([1,2,3,4,5,6,7,8,9,10],dtype=np.int64)\n",
@@ -224,33 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"int\") to list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-f7a8309d2390>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msome_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msome_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msome_list\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "some_list = [1,2,3]\n",
     "print(some_list)\n",
@@ -270,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -298,22 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 5 10 15]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np  \n",
     "some_array = np.array([1,2,3])\n",
@@ -345,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -362,23 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100 loops, best of 3: 7.64 ms per loop\n",
-      "10000 loops, best of 3: 62.4 µs per loop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%timeit for i in range(100000):  a_list[i] + 5\n",
     "%timeit an_array + 5"
@@ -441,53 +389,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3,)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "x = np.array([1,2,3])\n",
     "y = np.array([4,5])\n",
     "\n",
-    "#print(x + y)\n",
-    "\n",
-    "x.shape"
+    "print(x + y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.84147098  0.90929743  0.14112001]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(np.sin(x))"
    ]
@@ -528,23 +455,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2]\n",
-      " [3 4]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "an_array = np.array([[1,2],[3,4]],dtype=int)\n",
     "print(an_array)"
@@ -552,25 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.  0.]\n",
-      " [ 0.  0.]]\n",
-      "[[ 1.  2.]\n",
-      " [ 3.  4.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "an_array = np.zeros((2,2),dtype=float)\n",
     "print(an_array)\n",
@@ -618,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -626,25 +533,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7 8 9]\n",
-      "\n",
-      "1\n",
-      "\n",
-      "[[1]\n",
-      " [4]\n",
-      " [7]]\n",
-      "\n",
-      "[[1 2 3]\n",
-      " [4 5 6]\n",
-      " [7 8 9]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "an_array = np.array([[1,2,3],[4,5,6],[7,8,9]],dtype=int)\n",
     "print(an_array[-1])\n",
@@ -723,26 +612,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Element wise sum: [ 7 11]\n",
-      "Element wise difference: [-1 -1]\n",
-      "Element wise product: [12 30]\n",
-      "Element wise division: [ 0.75        0.83333333]\n",
-      "Dot product: 42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define two vector-like arrays\n",
     "x = np.array([3,5])\n",
@@ -841,22 +718,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x : [ 1. -2. -2.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = np.array([\n",
     "    [ 3,   2, -1],\n",
@@ -890,27 +759,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "λ 1: 3.35424868894\n",
-      "Eigen vector 1: [-0.8767397 -0.6354064]\n",
-      "\n",
-      "\n",
-      "λ 2: 8.64575131106\n",
-      "Eigen vector 2: [ 0.48096517 -0.7721779 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "M = np.array([\n",
     "    [5, 3],\n",
