--- a/lessons/00_inductive-python/07_functions.ipynb
+++ b/lessons/00_inductive-python/07_functions.ipynb
@@ -215,25 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def some_function(ARGUMENT):\n",
     "    \"\"\"\n",
@@ -302,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -332,24 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 5 2\n",
-      "1 2 7\n",
-      "5 4 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def some_function(a,b=5,c=7):\n",
     "    \"\"\"\n",
@@ -387,24 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n",
-      "10\n",
-      "402.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def some_function(a):\n",
     "    \"\"\"\n",
@@ -413,11 +382,11 @@
     "    \n",
     "    return a*5\n",
     "\n",
-    "x = some_function(5)\n",
-    "print(x)\n",
-    "\n",
     "print(some_function(2))\n",
-    "print(some_function(80.5))"
+    "print(some_function(80.5))\n",
+    "\n",
+    "x = some_function(5)\n",
+    "print(x)"
    ]
   },
   {
@@ -457,22 +426,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def some_function(a,b):\n",
     "    \"\"\"\n",
@@ -522,19 +483,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(25, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def some_function(a):\n",
     "    \"\"\"\n",
@@ -543,7 +496,7 @@
     "    \n",
     "    return a*5, a*2\n",
     "\n",
-    "_, y = some_function(5)\n",
+    "x, y = some_function(5)\n",
     "\n",
     "print(x)"
    ]
