--- a/lessons/00_inductive-python/00_table-of-contents.ipynb
+++ b/lessons/00_inductive-python/00_table-of-contents.ipynb
@@ -51,7 +51,7 @@
     "+ [Decision-making in python (conditionals)](03_conditionals.ipynb)\n",
     "+ [Loops](04_loops.ipynb)\n",
     "+ [Lists](05_lists.ipynb)\n",
-    "+ [numpy arrays](06_numpy_arrays.ipynb)\n",
+    "+ [numpy arrays](06_numpy-arrays.ipynb)\n",
     "+ [Tuples and dicts and strings](07_tuples-and-dicts-and-strings.ipynb)\n",
     "+ [Functions](08_functions.ipynb)"
    ]
