ready for class 9

--- a/labs/01_simulation/01_simulations.ipynb
+++ b/labs/01_simulation/01_simulations.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ If you want do do fast math operations on many numbers at once, should you use a `tuple`, `array` or `list`?"
+    "+ If you want to do fast math operations on many numbers at once, should you use a `tuple`, `array` or `list`?"
    ]
   },
   {
