--- a/labs/01_simulation/01_simulations.ipynb
+++ b/labs/01_simulation/01_simulations.ipynb
@@ -201,7 +201,7 @@
    "source": [
     "## Mutant Screen\n",
     "\n",
-    "You are doing a classic blue/white lacZ mutant screen, where bacterial mutants of interest have blue colonies rather than white colonies.  You screen a library containing 10,000 mutants.  You expect that 1/1,000 mutants will be blue.  Assuming no bias in the library, how many colonies do you need to look at to have a < 2% chance of missing a mutant? (You can report your sampling to within a factor of ten.)"
+    "You are doing a classic blue/white lacZ mutant screen, where bacterial mutants of interest have white colonies rather than blue colonies.  You screen a library containing 10,000 mutants.  You expect that 1/1,000 mutants will be white.  Assuming no bias in the library, how many colonies do you need to look at to have a < 2% chance of missing a mutant? (You can report your sampling to within a factor of ten.)"
    ]
   },
   {
