--- a/labs/03_molecular-structure/03_structure-files.ipynb
+++ b/labs/03_molecular-structure/03_structure-files.ipynb
@@ -121,7 +121,7 @@
    "source": [
     "The `HN` hydrogen atom attached to the `N` is often not in crystal structures because it is invisible in the diffraction experiment used to make the model.   Unfortunately, the `HN` atom coordinates are necessary to calculate things like structural biologists care about like [Ramachandran plots](https://en.wikipedia.org/wiki/Ramachandran_plot).  The missing atom is indicated with the red arrow in the figure below.\n",
     "\n",
-    "![hn_definition](NH_proton.png)\n",
+    "![hn_definition](https://raw.githubusercontent.com/harmsm/pythonic-science/master/labs/03_molecular-structure/NH_proton.png)\n",
     "\n",
     "Write a program that adds missing `HN` atoms and writes them out to a pdb file. \n",
     "   + `HN` will be in the plane formed by `C` atom from the *previous* resiude and the `N` and `CA` from its residue. (gray plane in image).  \n",
