--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -60,11 +60,17 @@
     "    \n",
     "if len(things_not_installed) == 0:\n",
     "    print(\"SUCCESS.  Environment is configured correctly.\")\n",
-    "else:\n",
+    "else:    \n",
     "    print(\"ERROR.  The following packages are not installed.\")\n",
     "    for t in things_not_installed:\n",
     "        print(\" * {}\".format(t))\n",
-    "    "
+    "    print()\n",
+    "    print(\"To install the missing packages, open your conda terminal and type:\")\n",
+    "    print()\n",
+    "    print(\"    conda install {}\".format(\" \".join(things_not_installed)))\n",
+    "    print()\n",
+    "    print(\"After this is finished.  Got to Kernel->Restart above and\")\n",
+    "    print(\"try running the notebook again.\")"
    ]
   },
   {
