--- a/labs/00.0_python-practice/intro-to-python-homework.ipynb
+++ b/labs/00.0_python-practice/intro-to-python-homework.ipynb
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ Create a $3 \\times 3$ numpy array with the integers 0-8:\n",
+    "+ Create a $3 \\times 3$ list of lists with the integers 0-8:\n",
     "\n",
     "  ```python\n",
     "    [[0,1,2],\n",
@@ -338,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
