--- a/labs/01_simulation/01_simulations-key.ipynb
+++ b/labs/01_simulation/01_simulations-key.ipynb
@@ -106,9 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
@@ -208,9 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -285,9 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -314,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -343,9 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -359,7 +349,7 @@
     }
    ],
    "source": [
-    "scipy.stats.ttest_ind(np.array(treat_1),np.array(treat_2))"
+    "scipy.stats.ttest_(np.array(treat_1),np.array(treat_2))"
    ]
   },
   {
@@ -419,9 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -478,9 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -523,9 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -579,9 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -633,7 +615,6 @@
    "cell_type": "code",
    "execution_count": 118,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -707,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
